made the hr letters functionality
