# src/entity/HRLetters.ts
@@ -1,0 +1,28 @@
+import { Column, Entity, JoinColumn, ManyToOne, PrimaryColumn, PrimaryGeneratedColumn } from "typeorm";
+import { Employee } from "./Employee";
+
+@Entity()
+export class HRLetters {
+    @PrimaryGeneratedColumn()
+    id?: number
+
+    @Column({
+        length: 1024
+    })
+    letter_subject?: string
+
+    @Column({
+        length: 1024
+    })
+    letter_content?: string
+
+    @Column({
+        type: 'timestamp',
+        default: () => 'CURRENT_TIMESTAMP'
+    })
+    letter_time?: Date
+
+    @ManyToOne(() => (Employee), (Employee) => { Employee.hrletters }, { onDelete: 'CASCADE', onUpdate: 'CASCADE' })
+    @JoinColumn({ name: 'employee_id' })
+    employee?: Employee
+}
