# src/models/req/ReqHRLetter.ts
@@ -1,0 +1,6 @@
+export interface ReqHRLetter {
+    letter_content?: string,
+    letter_subject?: string,
+    letter_time?: Date,
+
+}
